engadido con 	{{ content }} e {{ page.title }}

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,30 @@
 
+<!DOCTYPE html>
+<html>
+	<head>
+	<title>{{ page.title }}</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="irocho.wordpress.com">Páxina principal de i-rochiño </a></li>
+	        	<li><a href="https://medium.com/irocho-en-frances">Páxina de francés</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+		  
+    	{{ content }}
+		
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:irocho.profe@gmail.com">correo electrónico</a></li>
+        		<li><a href="https://github.com/irocho">github</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
