engadín ligazón a RSS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
     		<ul>
         		<li><a href="mailto:irocho.profe@gmail.com">correo electrónico</a></li>
         		<li><a href="https://github.com/irocho">github</a></li>
+        		<li><a href="http://irocho.github.io/blog/atom.xml">Subscribirse con RSS</a></li>
 			</ul>
 		</footer>
 	</body>
