--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
         		<li><a href="mailto:irocho.profe@gmail.com">correo electrónico</a></li>
         		<li><a href="https://github.com/irocho">github</a></li>
         		<li><a href="http://irocho.github.io/blog/atom.xml">Subscribirse con RSS</a></li>
+        		<li><a href="about">Quen somos</a></li>
 			</ul>
 		</footer>
 	</body>
