--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         		<li><a href="irocho.wordpress.com">Páxina principal de i-rochiño </a></li>
 	        	<li><a href="https://medium.com/irocho-en-frances">Páxina de francés</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/blog">Visita o noso Blog estático</a></li>
     		</ul>
 		</nav>
 		<div class="container">
