intento incrustar o logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
+		<img src="/imaxes/logo.png" alt="" />
 		<nav>
     		<ul>
         		<li><a href="irocho.wordpress.com">Páxina principal de i-rochiño </a></li>
@@ -25,7 +26,7 @@
         		<li><a href="mailto:irocho.profe@gmail.com">correo electrónico</a></li>
         		<li><a href="https://github.com/irocho">github</a></li>
         		<li><a href="http://irocho.github.io/blog/atom.xml">Subscribirse con RSS</a></li>
-        		<li><a href="about">Quen somos</a></li>
+        		<li><a href="/about">Quen somos</a></li>
 			</ul>
 		</footer>
 	</body>
