--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,11 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:irocho.profe@gmail.com">correo electrónico</a></li>
+        		<li><a href="https://github.com/irocho/irocho.github.io/wiki">Como fun facendo</a></li>
         		<li><a href="https://github.com/irocho">github</a></li>
         		<li><a href="http://irocho.github.io/blog/atom.xml">Subscribirse con RSS</a></li>
         		<li><a href="/about">Quen somos</a></li>
+			<li><a href="mailto:irocho.profe@gmail.com">correo electrónico</a></li>
 			</ul>
 		</footer>
 	</body>
