--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,10 @@
 		<hr>
 		<nav>
     		<ul>
-        		<li><a href="irocho.wordpress.com">Páxina principal de i-rochiño </a></li>
-	        	<li><a href="https://medium.com/irocho-en-frances">Páxina de francés</a></li>
+        		<li><a href="irocho.wordpress.com">Páxina en wordpress de i-rochiño </a></li>
+	        	<li><a href="https://medium.com/irocho-en-frances">Páxina en medium de francés</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Visita o noso Blog estático</a></li>
+        		
     		</ul>
 		</nav>
 		<hr>
@@ -25,11 +25,12 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="https://github.com/irocho/irocho.github.io/wiki">Como fun facendo</a></li>
+        		<li><a href="https://github.com/irocho/irocho.github.io/wiki">wiki</a></li>
         		<li><a href="https://github.com/irocho">github</a></li>
         		<li><a href="http://irocho.github.io/blog/atom.xml">Subscribirse con RSS</a></li>
         		<li><a href="/about">Quen somos</a></li>
 			<li><a href="mailto:irocho.profe@gmail.com">correo electrónico</a></li>
+			<li><a href="/blog">Visita o noso Blog estático</a></li>
 			</ul>
 		</footer>
 	</body>
