--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         		<li><a href="http://irocho.github.io/blog/atom.xml">Subscribirse con RSS</a></li>
         		<li><a href="/about">Quen somos</a></li>
 			<li><a href="mailto:irocho.profe@gmail.com">correo electrónico</a></li>
-			<li><a href="/blog">Visita o noso Blog estático</a></li>
+			<li><a href="/blog">Blog estático en Jekyll</a></li>
 			</ul>
 		</footer>
 	</body>
