--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 		<nav>
     		<ul>
         		<li><a href="irocho.wordpress.com">Páxina en wordpress de i-rochiño </a></li>
-	        	<li><a href="https://medium.com/irocho-en-frances">Páxina en medium de francés</a></li>
+	        	<li><a href="https://medium.com/@irocho">Páxinas de idiomas</a></li>
         		<li><a href="/cv">CV</a></li>
         		
     		</ul>
@@ -30,7 +30,7 @@
         		<li><a href="http://irocho.github.io/blog/atom.xml">Subscribirse con RSS</a></li>
         		<li><a href="/about">Quen somos</a></li>
 			<li><a href="mailto:irocho.profe@gmail.com">correo electrónico</a></li>
-			<li><a href="/blog">Blog estático en Jekyll</a></li>
+			<li><a href="/blog">Blog estático</a></li>
 			</ul>
 		</footer>
 	</body>
