--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,16 +3,16 @@ layout: default
 ---
 
 <h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
+
 
 <div class="post">
   {{ content }}
 </div>
 
 {% if page.next %}
-  <a href="{{  site.baseurl }}{{  page.next.url }}">Artículo posterior</a>
+  <a href="{{  site.baseurl }}{{  page.next.url }}">Artigo seguinte</a>
 {% endif %}
 
 {% if page.previous %}
-  <a href="{{  site.baseurl }}{{  page.previous.url }}">Artículo anterior</a>
+  <a href="{{  site.baseurl }}{{  page.previous.url }}">Artigo anterior</a>
 {% endif %}
