--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,9 +10,9 @@ layout: default
 </div>
 
 {% if page.previous %}
-  <a href="{{  site.baseurl }}{{  page.previous.url }}"> Artigo anterior </a>
+  <a href="{{  site.baseurl }}{{  page.previous.url }}"> Artigo anterior ... </a>
 {% endif %}
 
 {% if page.next %}
-  <a href="{{  site.baseurl }}{{  page.next.url }}"> Artigo seguinte </a>
+  <a href="{{  site.baseurl }}{{  page.next.url }}"> ... Artigo seguinte </a>
 {% endif %}
