--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
 
 <hr>
 {% if page.previous %}
-  <a href="{{  site.baseurl }}{{  page.previous.url }}"> <img src="anterior.png">  </a>
+  <a href="{{  site.baseurl }}{{  page.previous.url }}"> <img src="anterior.png" style="width:128px;height:128px;">  </a>
 {% endif %}
 
 {% if page.next %}
