--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,10 +9,10 @@ layout: default
   {{ content }}
 </div>
 
-
+<img src="anterior.png" style="width:32px;height:32px;border:0;">
 <hr>
 {% if page.previous %}
-  <a href="{{  site.baseurl }}{{  page.previous.url }}"> <img src="anterior.png" style="width:32px;height:32px;border:0;">  </a>
+  <a href="{{  site.baseurl }}{{  page.previous.url }}">  </a>
 {% endif %}
 
 {% if page.next %}
