--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,9 +8,9 @@ layout: default
 <div class="post">
   {{ content }}
 </div>
-
-<img src="anterior.png" style="width:32px;height:32px;border:0;">
-
+<figure>
+  <img src="anterior.png" style="width:32px;height:32px;border:0;">
+</figure>
 <hr>
 {% if page.previous %}
   <a href="{{  site.baseurl }}{{  page.previous.url }}">  </a>
