--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
   {{ content }}
 </div>
 <figure>
-  <img src="imaxes/anterior.png" style="width:32px;height:32px;border:0;">
+  <img src="anterior.png" style="width:32px;height:32px;border:0;">
 </figure>
 <hr>
 {% if page.previous %}
