--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,20 +25,16 @@
 
 		</div><!-- /.container -->
 		<footer>
+			{% if page.previous %}
+				<a href="{{  site.baseurl }}{{  page.previous.url }}">   <img src="anterior.png" style="width:32px;height:32px;border:0;"> </a>
+			{% endif %}
+
+			<li> {% if page.next %}
+				<a href="{{  site.baseurl }}{{  page.next.url }}"> ... ... Artigo seguinte </a>
+			{% endif %}
+
     		<ul>
-						<li><figure>
-						  <img src="anterior.png" style="width:32px;height:32px;border:0;">
-						</figure>
-
-						{% if page.previous %}
-						  <a href="{{  site.baseurl }}{{  page.previous.url }}">  </a>
-						{% endif %}
-
-						<li> {% if page.next %}
-						  <a href="{{  site.baseurl }}{{  page.next.url }}"> ... ... Artigo seguinte </a>
-						{% endif %}
-
-        		<li><a href="https://github.com/irocho/irocho.github.io/wiki">wiki</a></li>
+						<li><a href="https://github.com/irocho/irocho.github.io/wiki">wiki</a></li>
         		<li><a href="https://github.com/irocho">github</a></li>
         		<li><a href="http://irocho.github.io/blog/atom.xml">Subscribirse con RSS</a></li>
         		<li><a href="/about">Quen somos</a></li>
