--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
 		<div class="container">
     	{{ content }}
 		<br>
+				<img src="/imaxes/logo.png" alt="" />
 		</div><!-- /.container -->
 		<footer>
 			<ul>
