--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 		<div class="container">
     	{{ content }}
 		<br>
-				<img src="/imaxes/anterior.png" alt="" />
+				<img src="/imaxes/anterior.png" style="width:32px;height:32px;border:0;" alt="" />
 		</div><!-- /.container -->
 		<footer>
 			<ul>
