--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
 		<div class="container">
     	{{ content }}
 		<br>
+<div>
 		{% if page.previous %}
   				<a href="{{  site.baseurl }}{{  page.previous.url }}">
 							<img src="/imaxes/anterior.png" style="width:32px;height:32px;border:0;" alt="" />
@@ -31,7 +32,7 @@
 					<img src="/imaxes/seguinte.png" style="width:32px;height:32px;border:0;" alt="" />
 				 </a>
 			{% endif %}
-
+</div>
 		</div><!-- /.container -->
 		<footer>
 			<ul>
