--- a/css/main.css
+++ b/css/main.css
@@ -33,11 +33,15 @@ footer {
     font-size: .8em;
 }
 
-ul.posts { 
-    margin: 20px auto 40px; 
+ul.posts {
+    margin: 20px auto 40px;
     font-size: 1.5em;
 }
 
 ul.posts li {
     list-style: none;
+}
+figure {
+  float: left;
+  margin: 10px 10px 10px 0;
 }
