Despois de probar en local

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,9 @@
 		<hr>
 		<nav>
     		<ul>
-        		<li><a href="irocho.wordpress.com">Páxina en wordpress de i-rochiño </a></li>
+        		<li><a href="irocho.wordpress.com">Páxina en wordpress</a></li>
 	        	<li><a href="https://medium.com/@irocho">Páxinas de idiomas</a></li>
-        		<li><a href="/cv">CV</a></li>
+        		<li><a href="https://twitter.com/@irocho_">Twitter</a></li>
 
     		</ul>
 		</nav>
@@ -27,6 +27,10 @@
 							<img src="/imaxes/anterior.png" style="width:32px;height:32px;border:0;" alt="" />
 						</a>
 			{% endif %}
+			&nbsp;&nbsp;
+			<a href="http://irocho.github.io/blog">
+					<img src="/imaxes/home-xxl.png" style="width:32px;height:32px;border:0;" alt="" />
+			&nbsp;&nbsp;
 			{% if page.next %}
 			  <a href="{{  site.baseurl }}{{  page.next.url }}">
 					<img src="/imaxes/seguinte.png" style="width:32px;height:32px;border:0;" alt="" />
@@ -41,7 +45,7 @@
         		<li><a href="http://irocho.github.io/blog/atom.xml">Subscribirse con RSS</a></li>
         		<li><a href="/about">Quen somos</a></li>
 			<li><a href="mailto:irocho.profe@gmail.com">correo electrónico</a></li>
-			<li><a href="/blog">Blog estático</a></li>
+			<li><a href="/blog">Blog de Sistemas Operativos</a></li>
 			</ul>
 		</footer>
 	</body>
