--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
         		<li><a href="https://github.com/irocho">github</a></li>
         		<li><a href="http://irocho.github.io/blog/atom.xml">Subscribirse con RSS</a></li>
         		<li><a href="/about">Quen somos</a></li>
-			<li><a href="mailto:irocho.profe@gmail.com">correo electrónico</a></li>
+			<li><a href="mailto:irocho.profe@gmail.com">correo</a></li>
 			<li><a href="/blog">Blog de Sistemas Operativos</a></li>
 			</ul>
 		</footer>
