--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,11 @@ ul.posts {
     font-size: 1.5em;
 }
 
+ol.posts li {
+  font-size: 0.8em
+  font-family:'Serif';
+}
+
 ul.posts li {
     list-style: none;
 }
@@ -51,8 +56,4 @@ span {
   list-style: none;
   font-weight: bold;
   font-size: 0.9em
-  width: 300px;
-    height: 100px;
-    border: 1px solid blue;
-    box-sizing: border-box;
 }
