--- a/_layouts/som.html
+++ b/_layouts/som.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 <div class="som">
-  <h2><img src="{{ page.image_path }}" alt="page.title" />{{ page.title }}</h2>
+  <h2>{{ page.title }}</h2>
 
   <div class="blog-post spacing">
     {{ content }}
