--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,15 +11,16 @@
 		<hr>
 		<nav>
     		<ul>
-        		<li><a href="irocho.wordpress.com">Páxina en wordpress</a></li>
-	        	<li><a href="https://medium.com/@irocho">Páxinas de idiomas</a></li>
-        		<li><a href="https://twitter.com/@irocho_">Twitter</a></li>
+						<li><a href="/som">Anotacións de Sistemas Operativos </a></li>
+						<li><a href="/about">Quen somos</a></li>
+						<li><a href="https://github.com/irocho/irocho.github.io/wiki">Como fun facendo</a></li>
+						<li><a href="https://github.com/irocho">GitHub</a></li>
 
+						<li><a href="/blog">Blog </a></li>
     		</ul>
 		</nav>
 		<hr>
-		<div class="container">
-
+		<div class="container"><!-- /.container -->
 				<br>
 				<div align=center><!-- /.frechas -->
 					{% if page.previous %}
@@ -28,7 +29,7 @@
 								</a>
 					{% endif %}
 					&nbsp;&nbsp;
-					<a href="http://irocho.github.io/blog">
+					<a href="http://irocho.github.io/som">
 							<img src="/imaxes/home-xxl.png" style="width:32px;height:32px;border:0;" alt="" />
 					&nbsp;&nbsp;
 					{% if page.next %}
@@ -40,13 +41,14 @@
 	    	{{ content }}
 		</div><!-- /.container -->
 		<footer>
+			<br>
 			<ul>
-					<li><a href="https://github.com/irocho/irocho.github.io/wiki">wiki</a></li>
-        		<li><a href="https://github.com/irocho">github</a></li>
-        		<li><a href="http://irocho.github.io/blog/atom.xml">Subscribirse con RSS</a></li>
-        		<li><a href="/about">Quen somos</a></li>
-			<li><a href="mailto:irocho.profe@gmail.com">correo</a></li>
-			<li><a href="/blog">Blog de Sistemas Operativos</a></li>
+				<li><a href="irocho.wordpress.com">Páxina en wordpress</a></li>
+				<li><a href="https://medium.com/@irocho">Páxinas de idiomas</a></li>
+				<li><a href="https://twitter.com/@irocho_">Twitter</a></li>
+				<li><a href="http://irocho.github.io/blog/atom.xml">Subscribirse con RSS</a></li>
+					<li><a href="mailto:irocho.profe@gmail.com">correo</a></li>
+
 			</ul>
 		</footer>
 	</body>
