--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 		<hr>
 		<nav>
     		<ul>
-						<li><a href="/som">Anotacións de Sistemas Operativos </a></li>
+						<li><a href="./som.html">Anotacións de Sistemas Operativos </a></li>
 						<li><a href="/about">Quen somos</a></li>
 						<li><a href="https://github.com/irocho/irocho.github.io/wiki">Como fun facendo</a></li>
 						<li><a href="https://github.com/irocho">GitHub</a></li>
@@ -29,8 +29,9 @@
 								</a>
 					{% endif %}
 					&nbsp;&nbsp;
-					<a href="http://irocho.github.io/som">
+					<a href="./index.html">
 							<img src="/imaxes/home-xxl.png" style="width:32px;height:32px;border:0;" alt="" />
+						</a>
 					&nbsp;&nbsp;
 					{% if page.next %}
 					  <a href="{{  site.baseurl }}{{  page.next.url }}">
