os ficheiros de SOM teñen casita pero  non frechas

--- a/_layouts/som.html
+++ b/_layouts/som.html
@@ -1,6 +1,7 @@
 ---
-layout: default
+layout: page
 ---
+
 <div class="som">
   <h2>{{ page.title }}</h2>
 
@@ -8,3 +9,13 @@ layout: default
     {{ content }}
   </div>
 </div>
+
+<div align=center><!-- /.frechas -->
+
+  &nbsp;&nbsp;
+  <a href="/som/index.html">
+      <img src="/imaxes/home-xxl.png" style="width:32px;height:32px;border:0;" alt="" />
+    </a>
+  &nbsp;&nbsp;
+
+  </div> <!-- /.frechas -->
