--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 		<hr>
 		<nav>
     		<ul>
-						<li><a href="./som.html">Anotacións de Sistemas Operativos </a></li>
+						<li><a href="/som">Anotacións de Sistemas Operativos </a></li>
 						<li><a href="/about">Quen somos</a></li>
 						<li><a href="https://github.com/irocho/irocho.github.io/wiki">Como fun facendo</a></li>
 						<li><a href="https://github.com/irocho">GitHub</a></li>
@@ -22,27 +22,11 @@
 		<hr>
 		<div class="container"><!-- /.container -->
 				<br>
-				<div align=center><!-- /.frechas -->
-					{% if page.previous %}
-		  				<a href="{{  site.baseurl }}{{  page.previous.url }}">
-									<img src="/imaxes/anterior.png" style="width:32px;height:32px;border:0;" alt="" />
-								</a>
-					{% endif %}
-					&nbsp;&nbsp;
-					<a href="./index.html">
-							<img src="/imaxes/home-xxl.png" style="width:32px;height:32px;border:0;" alt="" />
-						</a>
-					&nbsp;&nbsp;
-					{% if page.next %}
-					  <a href="{{  site.baseurl }}{{  page.next.url }}">
-							<img src="/imaxes/seguinte.png" style="width:32px;height:32px;border:0;" alt="" />
-						 </a>
-					{% endif %}
-					</div> <!-- /.frechas -->
 	    	{{ content }}
+				<br>
 		</div><!-- /.container -->
 		<footer>
-			<br>
+
 			<ul>
 				<li><a href="irocho.wordpress.com">Páxina en wordpress</a></li>
 				<li><a href="https://medium.com/@irocho">Páxinas de idiomas</a></li>
