coleción de montaxe funciona

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 		<nav>
     		<ul>
 						<li><a href="/som">Anotacións de Sistemas Operativos </a></li>
-						<li><a href="/about">Quen somos</a></li>
+						<li><a href="/montaxe">Anotacións de Montaxe </a></li>
 						<li><a href="https://github.com/irocho/irocho.github.io/wiki">Como fun facendo</a></li>
 						<li><a href="https://github.com/irocho">GitHub</a></li>
 
@@ -28,6 +28,7 @@
 		<footer>
 
 			<ul>
+				<li><a href="/about">Quen somos</a></li>
 				<li><a href="irocho.wordpress.com">Páxina en wordpress</a></li>
 				<li><a href="https://medium.com/@irocho">Páxinas de idiomas</a></li>
 				<li><a href="https://twitter.com/@irocho_">Twitter</a></li>
