--- a/_layouts/montaxe.html
+++ b/_layouts/montaxe.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-<div class="som">
+<div class="montaxe">
   <h2>{{ page.title }}</h2>
 
   <div class="blog-post spacing">
@@ -12,8 +12,8 @@ layout: page
 
 <div align=center><!-- /.casiña -->
   &nbsp;&nbsp;
-  <a href="/som/index.html">
-      <img src="/imaxes/home-xxl.png" style="width:32px;height:32px;border:0;" alt="" />
+  <a href="/montaxe/index.html">
+      <img src="/imaxes/home-verde.png" style="width:32px;height:32px;border:0;" alt="" />
     </a>
   &nbsp;&nbsp;
 </div> <!-- /.casiña -->
