Xusto antes do Travis

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 	<title>{{ page.title }}</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 	</head>
 	<body>
 		<img src="/imaxes/logo.png" alt="" />
@@ -13,9 +14,7 @@
     		<ul>
 						<li><a href="/som">Anotacións de Sistemas Operativos </a></li>
 						<li><a href="/montaxe">Anotacións de Montaxe </a></li>
-						<li><a href="https://github.com/irocho/irocho.github.io/wiki">Como fun facendo</a></li>
-						<li><a href="https://github.com/irocho">GitHub</a></li>
-
+						<li><a href="https://github.com/irocho/irocho.github.io/wiki">Como fun facendo esto </a></li>
 						<li><a href="/blog">Blog </a></li>
     		</ul>
 		</nav>
@@ -25,17 +24,24 @@
 	    	{{ content }}
 				<br>
 		</div><!-- /.container -->
-		<footer>
-
+		<footer class="footer">
 			<ul>
-				<li><a href="/about">Quen somos</a></li>
-				<li><a href="irocho.wordpress.com">Páxina en wordpress</a></li>
-				<li><a href="https://medium.com/@irocho">Páxinas de idiomas</a></li>
-				<li><a href="https://twitter.com/@irocho_">Twitter</a></li>
-				<li><a href="http://irocho.github.io/blog/atom.xml">Subscribirse con RSS</a></li>
-					<li><a href="mailto:irocho.profe@gmail.com">correo</a></li>
+				<li>
+				<a href="http://irocho.wordpress.com" class="social-icon"><i class="fa fa-wordpress fa-3x"></i></a></li>
+				<li>
+				 <a href="https://medium.com/@irocho" class="social-icon"><i class="fa fa-medium fa-3x"></i></a></li>
+				 <li>
+ 			 <a href="https://github.com/irocho" class="social-icon"><i class="fa fa-github fa-3x"></i></a></li>
+			 <li>
+			 <a href="http://irocho.slideshare.com" class="social-icon"><i class="fa fa-slideshare fa-3x"></i></a></li>
 
-			</ul>
+			 	<li>
+				 <a href="https://twitter.com/_irocho" class="social-icon"><i class="fa fa-twitter fa-3x"></i></a></li>
+			 	<li>
+			 <a href="mailto:irocho.profe@gmail.com" class="social-icon"><i class="fa fa-envelope fa-3x"></i></a></li>
+			 <li>
+				 <a href="/about" class="social-icon"><i class="fa fa-id-card fa-3x"></i></a></li>
+		 </ul>
 		</footer>
 	</body>
 </html>
