--- a/css/main.css
+++ b/css/main.css
@@ -8,10 +8,20 @@ nav ul, footer ul {
     list-style: none;
     font-weight: bold;
 }
-nav ul li, footer ul li {
+nav ul li{
     display: inline;
-    margin-right: 20px;
+    margin-right: 40px;
 }
+footer ul li {
+    display: inline;
+    padding: 10px;
+}
+footer {
+    border-top: 1px solid #d5d5d5;
+    font-size: .6em;
+    text-align: center;
+}
+
 a {
     text-decoration: none;
     color: #999;
@@ -23,14 +33,14 @@ h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
+h2 {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+}
+
 p {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
-}
-footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
 }
 
 ul.posts {
@@ -51,9 +61,8 @@ figure {
   margin: 10px 10px 10px 0;
 }
 span {
-  font-family:'Serif';
+  font-family:'Helvetica', 'Arial', 'Sans-Serif';
   padding: 0px;
   list-style: none;
   font-weight: bold;
-  font-size: 0.8em
 }
