Travis peta: non teño alr onde as imaxes das casiñas

--- a/_layouts/som.html
+++ b/_layouts/som.html
@@ -10,10 +10,10 @@ layout: page
   </div>
 </div>
 
-<div align=center><!-- /.casiña -->
+<div align=center><!-- /.casiña laranxa -->
   &nbsp;&nbsp;
   <a href="/som/index.html">
-      <img src="/imaxes/home-xxl.png" style="width:32px;height:32px;border:0;" alt="" />
+      <img src="/imaxes/home-xxl.png" alt="Volver ó índice de Sistemas Operativos" style="width:32px;height:32px;border:0;" alt="" />
     </a>
   &nbsp;&nbsp;
 </div> <!-- /.casiña -->
