--- a/_layouts/montaxe.html
+++ b/_layouts/montaxe.html
@@ -10,10 +10,10 @@ layout: page
   </div>
 </div>
 
-<div align=center><!-- /.casiña -->
+<div align=center><!-- /.casiña verde-->
   &nbsp;&nbsp;
   <a href="/montaxe/index.html">
-      <img src="/imaxes/home-verde.png" style="width:32px;height:32px;border:0;" alt="" />
+      <img src="/imaxes/home-verde.png" alt="Volver ó índice de Montaxe" style="width:32px;height:32px;border:0;" alt="" />
     </a>
   &nbsp;&nbsp;
 </div> <!-- /.casiña -->
