Creada póla travis-setup para xogar co ficheiro de configuración de Travis

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 	</head>
 	<body>
-		<img src="/imaxes/logo.png" alt="" />
+		<img src="/imaxes/logo.png" alt="i-rochiño" />
 		<hr>
 		<nav>
     		<ul>
