--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
+		<link rel="shortcut icon" type="image/png" href="/i.png">
+
 	</head>
 	<body>
 		<img src="/imaxes/logo.png" alt="i-rochiño" />
