--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
-		<link rel="shortcut icon" type="image/png" href="/i.png">
+		<link rel="shortcut icon" type="image/png" href="imaxes/i-favicon.png">
 
 	</head>
 	<body>
