faio na coleción  planificar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,9 @@
     		<ul>
 						<li><a href="/som">Anotacións de Sistemas Operativos </a></li>
 						<li><a href="/montaxe">Anotacións de Montaxe </a></li>
-						<li><a href="https://github.com/irocho/irocho.github.io/wiki">Como fun facendo esto </a></li>
-						<li><a href="/blog">Blog </a></li>
+						<li><a href="/planificar">Anotacións de Planificación </a></li>
+
+						<!--<li><a href="/blog">Blog </a></li>-->
     		</ul>
 		</nav>
 		<hr>
@@ -44,6 +45,7 @@
 			 <li>
 				 <a href="/about" class="social-icon"><i class="fa fa-id-card fa-3x"></i></a></li>
 		 </ul>
+		 <a href="https://github.com/irocho/irocho.github.io/wiki">Como fun facendo esto </a>
 		</footer>
 	</body>
 </html>
