--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,14 @@ body {
     margin: 60px auto;
     width: 70%;
 }
+ul li {
+  font-size: 1.5em;
+  color: #333333;
+}
+
+
 nav ul, footer ul {
+    font-size: 0.7em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
@@ -36,33 +43,37 @@ h1 {
 h2 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-
+h3 {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+}
 p {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
 }
 
-ul.posts {
-    margin: 20px auto 40px;
-    font-size: 1.5em;
-}
-
-ol {
-  font-size: 0.7em
-  font-family:'Serif';
-}
-
-ul.posts li {
-    list-style: none;
-}
 figure {
   float: left;
   margin: 10px 10px 10px 0;
 }
+/*ol {
+  font-size: 0.7em
+  font-family:'Serif';
+}
+*/
+
 span {
   font-family:'Helvetica', 'Arial', 'Sans-Serif';
   padding: 0px;
   list-style: none;
   font-weight: bold;
 }
+
+/*ul.posts {
+    margin: 20px auto 40px;
+    font-size: 1.5em;
+}
+ul.posts li {
+    list-style: none;
+}
+*/
