creado un index para som outro para montaxae que se chama dende a barra de navegación

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,13 +10,13 @@
 
 	</head>
 	<body>
-		<img src="/imaxes/logo.png" alt="i-rochiño" />
+		<a href="../index.html"><img src="/imaxes/logo.png" alt="i-rochiño" /></a>
 		<hr>
 		<nav>
     		<ul>
-						<li><a href="/som">Anotacións de Sistemas Operativos </a></li>
-						<li><a href="/montaxe">Anotacións de Montaxe </a></li>
-						<li><a href="/planificar">Anotacións de Planificación </a></li>
+						<li><a href="/organizar/indexsom.html">Anotacións de Sistemas Operativos </a></li>
+						<li><a href="/organizar/indexmontaxe.html">Anotacións de Montaxe </a></li>
+						<!--<li><a href="/planificar">Anotacións de Planificación </a></li>-->
 
 						<!--<li><a href="/blog">Blog </a></li>-->
     		</ul>
