--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 
 <!DOCTYPE html>
 <html>
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorML"></script>
+
 	<head>
 	<title>{{ page.title }}</title>
 		<!-- link to main stylesheet -->
