--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorML"></script>
+<script async defer src="https://hypothes.is/embed.js"></script>
 
 	<head>
 	<title>{{ page.title }}</title>
