--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
 	</head>
 	<body>
-		<a href="../index.html"><img src="/imaxes/logo.png" alt="i-rochiño" /></a>
+		<a href="/index.html"><img src="/imaxes/logo.png" alt="i-rochiño" /></a>
 		<hr>
 		<nav>
     		<ul>
