--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,8 @@ ul.posts li {
 }
 */
 table{
+    margin-left: auto;
+    margin-right: auto;
     border-collapse: collapse;
     border-spacing: 10;
     border:2px solid #FFA500;
