--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 		<nav>
     		<ul>
 						<li><a href="/organizar/indexsom.html">Anotacións de Sistemas Operativos </a></li>
-						<li><a href="/organizar/indexmontaxe.html">Anotacións de Montaxe </a></li>
+						<li><a href="/organizar/indexmontaxe.html">Anotacións de hardware </a></li>
 						<!--<li><a href="/planificar">Anotacións de Planificación </a></li>-->
 
 						<!--<li><a href="/blog">Blog </a></li>-->
