retocado <p> a sans-serif en css

--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@ h3 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
