--- a/css/main.css
+++ b/css/main.css
@@ -9,16 +9,15 @@ ul li {
   font-size: 1em;
   color: #333333;
 }
-
+/*  */
 nav ul, footer ul {
-    font-size: 5em;
+    font-size: .7em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
 }
 nav ul li{
-    font-size: .7em;
     display: inline;
     margin-right: 40px;
 }
