--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body {
     margin: 60px auto;
     line-height: 1.4em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-size: 1.5em;
     width: 70%;
 }
 
