--- a/_layouts/placa.html
+++ b/_layouts/placa.html
@@ -4,8 +4,9 @@ layout: page
 
 <div class="placa">
   <h2>{{ page.title }}</h2>
-
-  <div class="blog-post spacing">
+<!--
+  <div class="blog-post spacing"> -->
+  <div>
     {{ content }}
   </div>
 </div>
