<div class="blurb">   {{ content }} </div>

--- a/_layouts/placa.html
+++ b/_layouts/placa.html
@@ -4,9 +4,8 @@ layout: page
 
 <div class="placa">
   <h2>{{ page.title }}</h2>
-<!--
-  <div class="blog-post spacing"> -->
-  <div>
+
+  <div class="blurb">
     {{ content }}
   </div>
 </div>
