montaxe/index.html cambio h2->h3

--- a/_layouts/placa.html
+++ b/_layouts/placa.html
@@ -5,7 +5,7 @@ layout: page
 <div class="placa">
   <h2>{{ page.title }}</h2>
 
-  <div class="blurb">
+  <div class="blog-post spacing">
     {{ content }}
   </div>
 </div>
