Versión sensata para comezar

--- a/_layouts/planificar.html
+++ b/_layouts/planificar.html
@@ -12,8 +12,8 @@ layout: page
 
 <div align=center><!-- /.casiña laranxa -->
   &nbsp;&nbsp;
-  <a href="/planificar/index.html">
-      <img src="/imaxes/home-xxl.png" alt="Volver ó índice de Planificación da CPU" style="width:32px;height:32px;border:0;" alt="" />
+  <a href="planificar/index.html">
+       <img src="/imaxes/home-xxl.png" alt="Volver ó índice de Planificación da CPU" style="width:32px;height:32px;border:0;" alt="" />
     </a>
   &nbsp;&nbsp;
 </div> <!-- /.casiña -->
