--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 	<hr>
 	<nav>
 		<ul>			
-			<li><a href="/organizar/indexjs.html">JavaScript </a></li>
+			<li><a href="/organizar/indexjavascript.html">JavaScript </a></li>
 
 			<li><a href="/organizar/indexsom.html">Anotacións de Sistemas Operativos </a></li>
 			<li><a href="/organizar/indexmontaxe.html">Anotacións de Hardware </a></li>
