--- a/_layouts/js.html
+++ b/_layouts/js.html
@@ -10,10 +10,10 @@ layout: page
   </div>
 </div>
 
-<div align=center><!-- /.casiña laranxa -->
+<div align=center><!-- /.casiña amarela -->
   &nbsp;&nbsp;
   <a href="/js/index.html">
-       <img src="/imaxes/home-xxl.png" alt="Volver á lista de tarefas de JavaScript" style="width:32px;height:32px;border:0;" alt="" />
+       <img src="/imaxes/casitaAmarela.png" alt="Volver á lista de tarefas de JavaScript" style="width:32px;height:32px;border:0;" alt="" />
     </a>
   &nbsp;&nbsp;
 </div> <!-- /.casiña -->
