--- a/_layouts/js.html
+++ b/_layouts/js.html
@@ -12,8 +12,8 @@ layout: page
 
 <div align=center><!-- /.casiña amarela -->
   &nbsp;&nbsp;
-  <a href="/js/index.html">
-       <img src="/imaxes/casitaAmarela.png" alt="Volver á lista de tarefas de JavaScript" style="width:32px;height:32px;border:0;" alt="" />
+  <a href="/js/indexjavascript.html">
+       <img src="/imaxes/casitaAmarela.jpeg" alt="Volver á lista de tarefas de JavaScript" style="width:32px;height:32px;border:0;" alt="" />
     </a>
   &nbsp;&nbsp;
 </div> <!-- /.casiña -->
