--- a/_layouts/js.html
+++ b/_layouts/js.html
@@ -13,7 +13,7 @@ layout: page
 <div align=center><!-- /.casiña amarela -->
   &nbsp;&nbsp;
   <a href="/js/indexjavascript.html">
-       <img src="/imaxes/casitaAmarela.jpeg" alt="Volver á lista de tarefas de JavaScript" style="width:32px;height:32px;border:0;" alt="" />
+       <img src="/imaxes/casitaAmarela.jpeg" alt="Volver a JavaScript" style="width:32px;height:32px;border:0;" alt="" />
     </a>
   &nbsp;&nbsp;
 </div> <!-- /.casiña -->
