--- a/_layouts/js.html
+++ b/_layouts/js.html
@@ -12,7 +12,7 @@ layout: page
 
 <div align=center><!-- /.casiña amarela -->
   &nbsp;&nbsp;
-  <a href="/js/indexjavascript.html">
+  <a href="/indexjavascript.html">
        <img src="/imaxes/casitaAmarela.jpeg" alt="Volver a JavaScript" style="width:32px;height:32px;border:0;" alt="" />
     </a>
   &nbsp;&nbsp;
