--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,8 @@
 	<nav>
 		<ul>			
 			<li><a href="/organizar/indexjs.html">JavaScript </a></li>
-
-			<li><a href="/organizar/indexsom.html">Anotacións de Sistemas Operativos </a></li>
-			<li><a href="/organizar/indexmontaxe.html">Anotacións de Hardware </a></li>
+			<li><a href="/organizar/indexsom.html"> Sistemas Operativos </a></li>
+			<li><a href="/organizar/indexmontaxe.html"> Hardware </a></li>
 			<!--<li><a href="/planificar">Anotacións de Planificación </a></li>-->
 
 			<!--<li><a href="/blog">Blog </a></li>-->
