--- a/_layouts/js.html
+++ b/_layouts/js.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-<div class="js">
+<div class="javascript">
   <h2>{{ page.title }}</h2>
 
   <div class="blog-post spacing">
@@ -12,7 +12,7 @@ layout: page
 
 <div align=center><!-- /.casiña marrón -->
   &nbsp;&nbsp;
-  <a href="/js/index.html">
+  <a href="/javascript/index.html">
        <img src="/imaxes/casitaMarron.png" alt="Volver a JavaScript" style="width:32px;height:32px;border:0;" alt="" />
     </a>
   &nbsp;&nbsp;
