--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ h1 {
 }
 h2 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    color: chocolate;
 }
 h3 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
