--- a/css/main.css
+++ b/css/main.css
@@ -97,9 +97,22 @@ ul.posts li {
 */
 
 
-code{
-  background-color: #999;
+pre code {
+  font: 12px "Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",Monaco,monospace;
+  color: #52595d;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  border: 1px solid #ccc;
+  background-color: #f9f9f9;
+  padding: 0px 3px;
+  display: inline-block;
+  margin: 0px;
 }
+
 table{
     margin-left: auto;
     margin-right: auto;
