--- a/css/main.css
+++ b/css/main.css
@@ -98,19 +98,19 @@ ul.posts li {
 
 
 pre code {
-  font: 12px "Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",Monaco,monospace;
+  font: 14px "Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",Monaco,monospace;
   color: #52595d;
-  -webkit-border-radius: 3px;
+  -webkit-border-radius: 5px;
   -moz-border-radius: 3px;
-  border-radius: 3px;
+  border-radius: 5px;
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
   border: 1px solid #ccc;
   background-color: #f9f9f9;
-  padding: 0px 3px;
+  padding: 5px 3px;
   display: inline-block;
-  margin: 0px;
+  margin-left: 10px;
 }
 
 table{
