--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Serif';
 }
 h2 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -98,7 +98,8 @@ ul.posts li {
 
 
 pre code {
-  font: 14px "Courier New","DejaVu Sans Mono","Bitstream Vera Sans Mono",Monaco,monospace;
+  font: 1em;
+  font-family: "Courier New", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", Monaco, monospace;
   color: #52595d;
   -webkit-border-radius: 5px;
   -moz-border-radius: 3px;
