--- a/css/main.css
+++ b/css/main.css
@@ -109,10 +109,12 @@ pre code {
   background-clip: padding-box;
   border: 1px solid #ccc;
   background-color: #f9f9f9;
-  padding: 5px 3px;
+  padding: 10px 10px;
   display: inline-block;
   margin-left: 10px;
   margin-right: 10px;
+      line-height: 1.4em;
+
 
 }
 
