--- a/css/main.css
+++ b/css/main.css
@@ -109,11 +109,11 @@ pre code {
   background-clip: padding-box;
   border: 1px solid #ccc;
   background-color: #f9f9f9;
-  padding: 10px 10px;
+  padding: 10px;
   display: inline-block;
   margin-left: 10px;
   margin-right: 10px;
-      line-height: 1.4em;
+  line-height: 1.2em;
 
 
 }
