--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,7 @@ h1 {
 h2 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     color: chocolate;
+    padding-top: 2em
 }
 h3 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
