--- a/css/main.css
+++ b/css/main.css
@@ -111,9 +111,8 @@ pre code {
   background-color: #f9f9f9;
   display: inline-block;
   margin-left: 10px;
-  margin-right: 10px;
   line-height: 1.2em;
-  padding: 5px
+  padding: 5px;
 }
 pre  {
   font: 2em;
