--- a/_layouts/javascript.html
+++ b/_layouts/javascript.html
@@ -12,7 +12,7 @@ layout: page
 
 <div align=center><!-- /.casiña marrón -->
   &nbsp;&nbsp;
-  <a href="organizar/indexjs.html">
+  <a href="../../organizar/indexjs.html">
        <img src="/imaxes/casitaMarron.png" alt="Volver a JavaScript" style="width:32px;height:32px;border:0;" alt="" />
     </a>
   &nbsp;&nbsp;
