--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,8 @@ body {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     font-size: 1.2em;
     width: 70%;
+      font-family: "Courier New", monospace;
+
 }
 
 /*  No corpo do texto, sae con punto gordo*/
