--- a/css/main.css
+++ b/css/main.css
@@ -46,9 +46,10 @@ h1 {
 h2 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding-top: 1.1em;
-    color: navy;
 }
-
+h3{
+  color: navy;
+}
 p {
     font-size: 1em;
     line-height: 1.4em;
