--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ figure {
 span {
   font-family:'Helvetica', 'Arial', 'Sans-Serif';
   list-style: none;
-  font-weight: bold;
+ /* font-weight: bold;*/
 }
 
 
@@ -95,7 +95,7 @@ ul.posts li {
 */
 
 
-pre {
+code pre {
   font: 2em;
   color: #52595d;
   -webkit-border-radius: 5px;
