--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ ul.posts li {
 }
 */
 
-
+/*
  pre code {
   font: 2em;
   color: #52595d;
@@ -115,14 +115,16 @@ ul.posts li {
   font-family: "Courier New", monospace;
 
 }
+*/
 
+/*
 code  {
   font: 2em;
   font-family: "Courier New", monospace;
 }
 
 
-
+*/
 
 
 table{
