--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 50px auto;
     line-height: 1.4em;
-   /* font-family:'Helvetica', 'Arial', 'Sans-Serif';*/
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
     font-size: 1.2em;
     width: 70%;
 }
