comezo coa coleción de redes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,8 @@
 	<a href="/index.html"> <img  src="/imaxes/logo.png" alt="i-rochiño" /></a>
 	<hr>
 	<nav>
-		<ul>			
+		<ul>
+			<li><a href="/organizar/indexredes.html">Redes </a></li>
 			<li><a href="/organizar/indexjs.html">JavaScript </a></li>
 			<li><a href="/organizar/indexsom.html"> Sistemas Operativos </a></li>
 			<li><a href="/organizar/indexmontaxe.html"> Hardware </a></li>
