cambiando twitter por mastodon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
 							<a href="http://irocho.slideshare.com" class="social-icon"><i class="fa fa-slideshare fa-3x"></i></a></li>
 
 							<li>
-								<a href="https://twitter.com/_irocho" class="social-icon"><i class="fa fa-twitter fa-3x"></i></a></li>
+								<a href="https://mastodon.social/@irocho" class="social-icon"><i class="fa fa-mastodon fa-3x"></i></a></li>
 								<li>
 									<a href="mailto:irocho.profe@gmail.com" class="social-icon"><i class="fa fa-envelope fa-3x"></i></a></li>
 									<li>
