traballado o da placa

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,10 @@
-
 <!DOCTYPE html>
 <html>
 
 <head>
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-	<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorML"></script>
+	<script type="text/javascript"
+		src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorML"></script>
 	<script async defer src="https://hypothes.is/embed.js"></script>
 
 	<title>{{ page.title }}</title>
@@ -13,8 +13,9 @@
 	<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 	<!--<<link rel="shortcut icon" type="image/x-icon" href="i-favicon.ico">-->
 </head>
+
 <body>
-	<a href="/index.html"> <img  src="/imaxes/logo.png" alt="i-rochiño" /></a>
+	<a href="/index.html"> <img src="/imaxes/logo.png" alt="i-rochiño" /></a>
 	<hr>
 	<nav>
 		<ul>
@@ -22,6 +23,7 @@
 			<li><a href="/organizar/indexjs.html">JavaScript </a></li>
 			<li><a href="/organizar/indexsom.html"> Sistemas Operativos </a></li>
 			<li><a href="/organizar/indexmontaxe.html"> Hardware </a></li>
+
 			<!--<li><a href="/planificar">Anotacións de Planificación </a></li>-->
 
 			<!--<li><a href="/blog">Blog </a></li>-->
@@ -36,22 +38,29 @@
 	<footer class="footer">
 		<ul>
 			<li>
-				<a href="http://irocho.wordpress.com" class="social-icon"><i class="fa fa-wordpress fa-3x"></i></a></li>
-				<li>
-					<a href="https://medium.com/@irocho" class="social-icon"><i class="fa fa-medium fa-3x"></i></a></li>
-					<li>
-						<a href="https://github.com/irocho" class="social-icon"><i class="fa fa-github fa-3x"></i></a></li>
-						<li>
-							<a href="http://irocho.slideshare.com" class="social-icon"><i class="fa fa-slideshare fa-3x"></i></a></li>
+				<a href="http://irocho.wordpress.com" class="social-icon"><i class="fa fa-wordpress fa-3x"></i></a>
+			</li>
+			<li>
+				<a href="https://medium.com/@irocho" class="social-icon"><i class="fa fa-medium fa-3x"></i></a>
+			</li>
+			<li>
+				<a href="https://github.com/irocho" class="social-icon"><i class="fa fa-github fa-3x"></i></a>
+			</li>
+			<li>
+				<a href="http://irocho.slideshare.com" class="social-icon"><i class="fa fa-slideshare fa-3x"></i></a>
+			</li>
+			<li>
+				<a href="https://mastodon.social/@irocho" class="social-icon"><i class="fa fa-mastodon"></i></a>
+			</li>
+			<li>
+				<a href="mailto:irocho.profe@gmail.com" class="social-icon"><i class="fa fa-envelope fa-3x"></i></a>
+			</li>
+			<li>
+				<a href="/about" class="social-icon"><i class="fa fa-id-card fa-3x"></i></a>
+			</li>
+		</ul>
+		<a href="https://github.com/irocho/irocho.github.io/wiki">Como fun facendo esto </a>
+	</footer>
+</body>
 
-							<li>
-								<a href="https://mastodon.social/@irocho" class="social-icon"><i class="fa fa-mastodon fa-3x"></i></a></li>
-								<li>
-									<a href="mailto:irocho.profe@gmail.com" class="social-icon"><i class="fa fa-envelope fa-3x"></i></a></li>
-									<li>
-										<a href="/about" class="social-icon"><i class="fa fa-id-card fa-3x"></i></a></li>
-									</ul>
-									<a href="https://github.com/irocho/irocho.github.io/wiki">Como fun facendo esto </a>
-								</footer>
-							</body>
-							</html>
+</html>
