--- a/_layouts/montaxe.html
+++ b/_layouts/montaxe.html
@@ -13,7 +13,7 @@ layout: page
 <div align=center><!-- /.casiña verde-->
   &nbsp;&nbsp;
   <a href="/montaxe/index.html">
-       <img src="/imaxes/home-verde.png" alt="Volver ó índice de Montaxe" style="width:32px;height:32px;border:0;" alt="" />
+       <img src="/imaxes/home-verde.png" alt="Volver á portada de Montaxe" style="width:32px;height:32px;border:0;" alt="" />
     </a>
   &nbsp;&nbsp;
 </div> <!-- /.casiña -->
