--- a/_layouts/redes.html
+++ b/_layouts/redes.html
@@ -13,7 +13,8 @@ layout: page
 <div align=center><!-- /.casiña laranxa -->
   &nbsp;&nbsp;
   <a href="/redes/index.html">
-       <img src="/imaxes/home-xxl.png" alt="Volver á portada de Redes" style="width:32px;height:32px;border:0;" alt="" />
+       <img src="/imaxes/home-xxl.png" alt="Volver á portada de Redes"
+        style="width:32px;height:32px;border:0;" alt="" />
     </a>
   &nbsp;&nbsp;
 </div> <!-- /.casiña -->
