--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 			<li><a href="/organizar/indexredes.html">Redes </a></li>
 			<li><a href="/organizar/indexjs.html">JavaScript </a></li>
 			<li><a href="/organizar/indexsom.html"> Sistemas Operativos </a></li>
-			<li><a href="/organizar/indexmontaxe.html"> Hardware </a></li>
+			<li><a href="/organizar/indexmontaxe.html"> Hardware 👨‍🏭</a></li>
 
 			<!--<li><a href="/planificar">Anotacións de Planificación </a></li>-->
 
@@ -30,7 +30,7 @@
 		</ul>
 	</nav>
 	<hr>
-	<div class="container"><!-- /.container -->
+	<div class="container"><!-- aquí vai a chicha-->
 		{{ content }}
 		<br>
 
