--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,8 @@
 		<ul>
 			<li><a href="/organizar/indexredes.html">Redes </a></li>
 			<li><a href="/organizar/indexjs.html">JavaScript </a></li>
+			<li><a href="/organizar/indexpython.html">Python </a></li>
+
 			<li><a href="/organizar/indexsom.html"> Sistemas Operativos </a></li>
 			<li><a href="/organizar/indexmontaxe.html"> Hardware 👨‍🏭</a></li>
 
