--- a/_layouts/cpd.html
+++ b/_layouts/cpd.html
@@ -13,7 +13,7 @@ layout: page
 <div align=center><!-- /.casiña laranxa -->
   &nbsp;&nbsp;
   <a href="/cpd/index.html">
-       <img src="/imaxes/home-xxl.png" alt="Volver ao índice " style="width:32px;height:32px;border:0;" alt="" />
+       <img src="/imaxes/home-verde.png" alt="Volver ao índice " style="width:32px;height:32px;border:0;" alt="" />
     </a>
   &nbsp;&nbsp;
 </div> <!-- /.casiña -->
