--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
 			<li><a href="/organizar/indexjs.html">JavaScript </a></li>
 			<li><a href="/organizar/indexsom.html"> Sistemas Operativos </a></li>
 			<li><a href="/organizar/indexmontaxe.html"> Hardware 👨‍🏭</a></li>
+			<li><a href="/organizar/indexcpd.html"> CPD </a></li>
 
 			<!--<li><a href="/planificar">Anotacións de Planificación </a></li>-->
 
